bdr.BDR.scala.error
Erreur de compilation :
BDR:36: error: not found: value True
    fini = True;
           ^